examples/test/testpolicy1457.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1457
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key11: value38
      key35: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value12
          key27: value28
      podSelector:
        matchLabels:
          key4: value41
          key1: value19
